Modified the URL for the about page

--- a/Lab2/Lab2-Home.html
+++ b/Lab2/Lab2-Home.html
@@ -48,7 +48,7 @@
             
           <tr>
           <td>Lab 2 - About</td>
-          <td><a href="H:\Web Programming\Assignments\Lab2-about.html" title="About">Lab 2 - About</a></td>
+          <td><a href="https://github.com/Nell-dev/Web-Programming/blob/main/Lab2/Lab2-About.html" title="About">Lab 2 - About</a></td>
 
           <tr>
           <td>Google</td>
