Updated the href line to the home page.

--- a/Lab2/Lab2-About.html
+++ b/Lab2/Lab2-About.html
@@ -60,7 +60,7 @@
     </tr>
     <tr>
       <td>Lab 2 Home Page</td>
-      <td><a href="H:\Web Programming\Assignments\Lab2-Home.Html">Lab2-home.html</a></td>
+      <td><a href="https://github.com/Nell-dev/Web-Programming/blob/main/Lab2/Lab2-Home.html">Lab2-home.html</a></td>
     </tr>
     <tr>
       <td>Contact Neletre via Email</td>
