Update made minor changes to Lab2-Forms.html
Made some minor changes to the input and label elements

--- a/Lab2/Lab2-Forms.html
+++ b/Lab2/Lab2-Forms.html
@@ -31,18 +31,18 @@
 		<form action ="https://www.w3schools.com/action_page.php" method ="get">
 			<p>
 				<label for="name">Customer Name</label>
-				<input type="text" id="customer" name="customer"</input>
+				<input type="text" id="customer" name="customer">
 			</p>
 
 			<p>
 				<label for="mail">Customer Email</label>
-				<input type="email" id="mail" name="email"</input>
+				<input type="email" id="email" name="email">
 			</p>
 
 <!- Coffee Type (dropdown/select with options like Latte, Cappuccino, etc.) -->	
   			<p>
-				<label for="ctype">Coffee Type</label>
-				<select id="coffeetypes" name="types">
+				<label for="coffeetypes">Coffee Type</label>
+				<select id="coffeetypes" name="coffeetypes">
 					<option></option>
 					<option>Cappuccino</option>
 					<option>Latte</option>
