--- a/Lab4/lab4-boxmodel.html
+++ b/Lab4/lab4-boxmodel.html
@@ -1,1 +1,25 @@
-Container for lab 4
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>CSS Box Model Lab</title>
+		<style>/* Add your CSS here */
+			
+			.box{ margin: 20px;
+				padding: 20px;
+				width:250px;
+				height: 150px;
+				border: 5px solid blue;
+				background-color: lightgrey;
+				box-sizing: border-box;
+			}
+		</style>
+	</head>
+	<body>
+		<h1>CSS Box Model Lab</h1>
+		<div class="box">
+			<p>This is a demonstration of the CSS Box Model.</p>
+		</div>
+	</body>
+</html>
