--- a/Lab5/coffee_shop.html
+++ b/Lab5/coffee_shop.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Java Haven</title>
-  <link rel="stylesheet" href="E:\Programming\Web Development Programming\Web Programming - Tri-C Summer Course\Labs\Lab5\stylesheet.css">
+  <link rel="stylesheet" href="Lab5\stylesheet.css">
 </head>
 <body>
   <header class="header">
